--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@
     --chart-5: 27 87% 67%;
     --default: 240, 15%, 5%;
     --subtle: 0, 0%, 48%;
+    --card-border: 0,0,85%;
   }
 
   .dark {
@@ -60,6 +61,7 @@
     --chart-5: 340 75% 55%;
     --default: 0, 0%, 100%;
     --subtle: 0, 0%, 72%;
+    --card-border: 234,8%,25%;
   }
 }
 
